@@ -7,6 +7,7 @@ rebuildd (0.2.0) UNRELEASED; urgency=low
   * Don't stock build_time, stock build_start and build_end
   * Move http server outside, and standalone
   * Add a bunch of filter possibility on Web interface
+  * Create unit tests
 
  -- Julien Danjou <acid@debian.org>  Tue, 10 Jul 2007 10:36:33 +0200
 
